[gd_scene load_steps=6 format=3 uid="uid://dfw3m2e21tmmm"]

[ext_resource type="Script" uid="uid://djp7gl27m2h8w" path="res://scripts/nave_explosion.gd" id="1_6b5bu"]
[ext_resource type="Texture2D" uid="uid://co3cs4qqw0isq" path="res://sprite/square.png" id="1_lu4b0"]

[sub_resource type="Animation" id="Animation_6b5bu"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kj2on"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kj2on"]
_data = {
&"RESET": SubResource("Animation_kj2on"),
&"fade_out": SubResource("Animation_6b5bu")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6b5bu")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(0.513726, 0.984314, 0.639216, 1)
amount = 15
texture = ExtResource("1_lu4b0")
lifetime = 0.2
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 433.33
scale_amount_min = 0.01
scale_amount_max = 0.01

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="fade_out" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kj2on")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="fade_out" to="." method="_on_fade_out_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
